--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,8 +1,8 @@
 body {
   background-color: #fff;
-  color: #333;
-  font-family: Georgia, sans-serif;
-  font-size: 14px;
+  color: blue;
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 13px;
   line-height: 18px;
 }
 
